--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -20,19 +20,19 @@
 Por todo ello os invitamos a participar para que juntos podamos construir los pilares de una movilidad <b>SEGURA, SOSTENIBLE Y CONECTADA</b> en Cantabria. Queremos escuchar vuestras propuestas, que opinéis sobre las nuestras, saber vuestros problemas y afrontar mediante el diálogo los retos futuros de la movilidad en nuestra región <br><br>
 <h4><b>¡PARTICIPA! ¡Construyamos juntos la movilidad sostenible de Cantabria!</b></h4><br>
 <b>¿CÓMO PUEDES PARTICIPAR?</b><br><br>
-<li><a href="/proposals">Compartiendo tus propuestas, votando las de otros ciudadanos/as, y Valorando y opinando sobre las propuestas cerradas que los técnicos han incluido en esta web.</a></li>
-<li><a href="/legislation/processes">Contándonos las ventajas y/o desventajas que aprecias en los nuevos modelos de movilidad planteados para el 2030.</a></li>
-<li><a href="/legislation/processes">Comentándonos tus problemas para desplazarte con el actual modelo de movilidad.</a></li>
+<li>Compartiendo tus propuestas, votando las de otros ciudadanos/as, y Valorando y opinando sobre las propuestas cerradas que los técnicos han incluido en esta web.</li>
+<li>Contándonos las ventajas y/o desventajas que aprecias en los nuevos modelos de movilidad planteados para el 2030.</li>
+<li>Comentándonos tus problemas para desplazarte con el actual modelo de movilidad.</li>
 
 </p>
         <div class="small-12 medium-6 large-4" style="width: 50%;margin: 0 auto;">
-          <a class="button expanded large" href="/users/sign_up">¿Quieres participar?</a>
+          <a class="button expanded large" href="/users/sign_up">¿Quieres participar?, Regístrate</a>
         </div>
       </div>
 
         <div class="small-12 medium-6 column">
-          <%= image_tag(image_path_for("home.png"), class: "margin", alt: setting["org_name"]) %>
-          <br>
+          <%= video_tag(image_path_for("video_home.mp4"), :controls => true, class: "margin video", alt: setting["org_name"]) %>
+          <p>fuente: <a href="https://esmovilidad.mitma.es/">Ministerio de Transportes, Movilidad y Agenda Urbana</a></p>
           <br>
           <h4>Los ejes de movilidad sostenible</h4>
           <p> Son los 9 aspectos en torno a los que el <a href="https://esmovilidad.mitma.es/">Ministerio de Transportes, Movilidad y Agenda Urbana</a> ha estructurado la estrategia de movilidad para los próximos 10 años, buscando la coordinación y cooperación de todas las administraciones públicas, así como la participación ciudadana.</p>
