--- a/app/views/legislation/processes/_proposals_content.html.erb
+++ b/app/views/legislation/processes/_proposals_content.html.erb
@@ -17,10 +17,16 @@
 
       <div class="small-12 medium-3 column">
         <% if process.proposals_phase.open? || process.draft_phase.open? %>
-          <p><%= link_to new_legislation_proposal_link_text(process),
+          <p><!--<%= link_to new_legislation_proposal_link_text(process),
                          new_legislation_process_proposal_path(process),
                          class: "button expanded",
-                         id: "create-new-proposal" %></p>
+                         id: "create-new-proposal" %>-->
+                          <%= link_to "Comparte tu Idea",
+                         new_legislation_process_proposal_path(process),
+                         class: "button expanded",
+                         id: "create-new-proposal" %> 
+
+                         </p>
         <% end %>
         <%= render "legislation/proposals/categories", taggable: process %>
       </div>
