--- a/app/views/pages/help/index.html.erb
+++ b/app/views/pages/help/index.html.erb
@@ -10,9 +10,9 @@
     <div class="small-12 medium-12 column">
       <h2><%= t("pages.help.title", org: setting["org_name"]) %></h2>
       <!--<p><%= t("pages.help.guide", org: setting["org_name"]) %></p>-->
-      <p><a href="/">CANTABRIA SE MUEVE</a> es una plataforma de participación ciudadana para el desarrollo de Estrategias de Movilidad Sostenible en la región. </p>
+      <p><a href="/">CANTABRIA EN MOVIMIENTO</a> es una plataforma de participación ciudadana para el desarrollo de Estrategias de Movilidad Sostenible en la región. </p>
 
-<p>Esta guía explica para qué sirven y cómo funciona cada una de las secciones de <a href="/">CANTABRIA SE MUEVE</a></p>
+<p>Esta guía explica para qué sirven y cómo funciona cada una de las secciones de <a href="/">CANTABRIA EN MOVIMIENTO</a></p>
     </div>
   </div>
 
@@ -77,7 +77,7 @@
  
  <div class="row section-content">
 <div class="small-12 column" id="proposals" data-magellan-target="proposals">
-<p>Recuerda ser respetuoso en tus aportaciones y las de los demás. Queremos que <a href="/">CANTABRIA SE MUEVE</a> sea un espacio abierto para el debate y reflexión sobre el futuro de la movilidad en nuestra región. </p> 
+<p>Recuerda ser respetuoso en tus aportaciones y las de los demás. Queremos que <a href="/">CANTABRIA EN MOVIMIENTO</a> sea un espacio abierto para el debate y reflexión sobre el futuro de la movilidad en nuestra región. </p>
 </div></div>
 
 
