Cambio logo, errata corregida

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -16,7 +16,7 @@
       <div class="small-12 medium-6 column ">
         <span></span>
         <h1>Comparte tus ideas</h1>
-        <p class="">CANTABRIA EN MOVIMENTO es una Plataforma Participativa para entablar un diálogo social con la ciudadanía y los actores implicados en el ecosistema de movilidad. Se pretenden afrontar los retos futuros de la movilidad y el transporte en Cantabria para el establecimiento de estrategias de movilidad sostenible.  <br><br>
+        <p class="">CANTABRIA EN MOVIMIENTO es una Plataforma Participativa para entablar un diálogo social con la ciudadanía y los actores implicados en el ecosistema de movilidad. Se pretenden afrontar los retos futuros de la movilidad y el transporte en Cantabria para el establecimiento de estrategias de movilidad sostenible.  <br><br>
 Por todo ello os invitamos a participar para que juntos podamos construir los pilares de una movilidad <b>SEGURA, SOSTENIBLE Y CONECTADA</b> en Cantabria. Queremos escuchar vuestras propuestas, que opinéis sobre las nuestras, saber vuestros problemas y afrontar mediante el diálogo los retos futuros de la movilidad en nuestra región <br><br>
 <h4><b>¡PARTICIPA! ¡Construyamos juntos la movilidad sostenible de Cantabria!</b></h4><br>
 <b>¿CÓMO PUEDES PARTICIPAR?</b><br><br>
