Ampliada la ayuda. Correo de contacto corregido.

--- a/app/views/pages/help/index.html antes nueva ayuda.erb
+++ b/app/views/pages/help/index.html antes nueva ayuda.erb
@@ -45,10 +45,10 @@
 
     
   <p>
-    Pinchando en la pestaña <a href="/legislation/processes">EJES DE MOVILIDAD</a> accederás a los “SUBEJES ACTIVOS” donde podrás dejar tus opiniones. Igualmente podrás interactuar con los comentarios de otros usuarios apoyándolos si los consideras relevantes.
+    Pinchando en la pestaña <a href="/legislation/processes">EJES DE MOVILIDAD</a> accederás al organigrama de cada uno de los ejes y a los “SUBEJES ACTIVOS” donde podrás dejar tus reflexiones, aportaciones y opinión. Queremos escuchar los problemas de movilidad que aprecias en el lugar de Cantabria donde desarrollas tu vida y las posibles soluciones que encuentras para el bien común de toda la ciudadanía.
   </p>
-  <p>En “AYUDA SOBRE EL EJE” encontrarás información sobre su contenido, principios básicos y objetivos. </p>
-  <p>También puedes consultar uno a uno cada eje para poder participar.</p>
+  <p>También puedes consultar uno a uno cada eje pinchando en el eje de Movilidad del que quieras consultar las propuestas y debates para poder participar. Si dentro pinchas en “AYUDA SOBRE EL EJE” encontrarás información sobre su contenido, principios básicos y objetivos. Igualmente podrás acceder a cada una de las propuestas establecidas para dar tu opinión, aportaciones, reflexiones y votos. Ten en cuenta que muchas de las propuestas engloban varios ejes.</p>
+  <p>Igualmente podrás interactuar con los comentarios de otros usuarios apoyándolos si los consideras relevantes.</p>
   
 
   </div></div>
@@ -69,17 +69,9 @@
 
     
   <p>
-    En la pestaña <a href="/proposals">PROPUESTAS</a>, tendrás la posibilidad de “<a href="/proposals/new">crear propuesta</a>”. Para ello deberás de rellenar los campos:
+    ...
   </p>
-  <ul>
-    <li>Título de propuesta.</li>
-    <li>Resumen.</li>
-    <li>Texto desarrollado de la propuesta.</li>
-    <li>Posibilidad de añadir: enlace de video, imagen, y un documento de hasta 3 MG.</li>
-    <li>Podrás seleccionar si lo deseas el ámbito de actuación (mapa).</li>
-    <li>Deberás seleccionar el eje o ejes en los que se enmarca tu propuesta.</li>
-  </ul>
-  <p>En MENU – ADMINISTRACIÓN – LEGISLACIÓN COLABORATIVA, podrás editar (modificar) el texto de tu propuesta y también podrás eliminarla. </p>
+  <p>...</p>
   
   </div></div>
  
