--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -46,6 +46,7 @@ Por todo ello os invitamos a participar para que juntos podamos construir los pi
   <div class="small-12 column ">
         <h3 class="title">Participa</h3>
         <div class="row" data-equalizer="" data-equalizer-on="medium" data-resize="b9h079-eq" data-mutate="4hta6g-eq" data-n="417812-n">
+    <!-- Quito lo de legislación
     <div id="widget_card_6" class="card small-12 medium-6 column margin-bottom end" data-equalizer-watch="" style="height: 345px;">
   <a href="/legislation/processes">
     <figure class="figure-card">
@@ -59,7 +60,7 @@ Por todo ello os invitamos a participar para que juntos podamos construir los pi
     <p class="description">Accede a los ejes de movilidad. Participa en la creación de la estrategia de movilidad, nosotros te proponemos temas para que nos hagas llegar tu opinión y tus propuestas. ¡No dudes en participar!.</p>
     <p>¡Haz click aquí para acceder a los ejes!</p>
 </a></div>
-
+      -->
     <div id="widget_card_7" class="card small-12 medium-6 column margin-bottom end" data-equalizer-watch="" style="height: 345px;">
   <a href="/proposals">
     <figure class="figure-card">
@@ -70,9 +71,10 @@ Por todo ello os invitamos a participar para que juntos podamos construir los pi
         <h3>Propuestas</h3>
       </figcaption>
     </figure>
-    <p class="description">Comparte tus propuestas, votan las de otros ciudadanos/as, y Valora y opina sobre las propuestas cerradas que los técnicos han incluido en esta web</p>
+    <p class="description">Comparte tus propuestas, votan las de otros ciudadanos/as, y valora y opina sobre las propuestas cerradas que los técnicos han incluido en esta web</p>
     <p>¡Haz click aquí para acceder a las propuestas!</p>
 </a></div>
+
 </div>
 
 </div>
@@ -85,7 +87,7 @@ Por todo ello os invitamos a participar para que juntos podamos construir los pi
 
         <!--<%= render "shared/cards", cards: @cards %>-->
       </div>
-      
+
     <% end %>
 
     <% if feed_processes_enabled? %>
