--- a/app/views/pages/help/index.html.erb
+++ b/app/views/pages/help/index.html.erb
@@ -27,7 +27,7 @@
 <div class="small-12 column" id="proposals" data-magellan-target="proposals">
     <h3>REGISTRO ANÓNIMO DE PARTICIPANTES</h3>
 
-    
+
   <p>
     Para poder interactuar en la plataforma será necesario registrarse a través de un sencillo paso. Para ello se deberá de iniciar sesión en la pestaña <a href="/users/sign_up">REGISTRO</a>  una vez confirmado el correo y contraseña. Los datos requeridos para el registro son:  permite a los usuarios registrados presentar o apoyar propuestas, para que sean estudiadas y en su caso llevadas a cabo.
   </p>
@@ -42,32 +42,27 @@
 <div class="row section-content">
 <div class="small-12 column" id="proposals" data-magellan-target="proposals">
     <h3>EJES DE MOVILIDAD</h3>
-
-    
   <p>
-    Pinchando en la pestaña <a href="/legislation/processes">EJES DE MOVILIDAD</a> accederás a los “SUBEJES ACTIVOS” donde podrás dejar tus opiniones. Igualmente podrás interactuar con los comentarios de otros usuarios apoyándolos si los consideras relevantes.
-  </p>
-  <p>En “AYUDA SOBRE EL EJE” encontrarás información sobre su contenido, principios básicos y objetivos. </p>
-  <p>También puedes consultar uno a uno cada eje para poder participar.</p>
-  
+    Pinchando en la pestaña <a href="/legislation/processes">EJES DE MOVILIDAD</a> encontrarás información sobre el contenido, principios básicos y objetivos de cada uno. <p>
+
 
   </div></div>
   <div class="row section-content">
 <div class="small-12 column" id="proposals" data-magellan-target="proposals">
     <h3>PROPUESTAS</h3>
 
-    
+
   <p>
     Pinchando en la pestaña <a href="/proposals">PROPUESTAS</a>, aparecerán todas las propuestas establecidas donde podrás transmitir tu opinión, aportaciones, reflexiones y votar aquellas propuestas que te parezcan más interesantes.
   </p>
   <p>También podrás interactuar con los comentarios de otros usuarios apoyándolos si los consideras relevantes.</p>
-  
+
   </div></div>
   <div class="row section-content">
   <div class="small-12 column" id="proposals" data-magellan-target="proposals">
     <h3>CREAR UNA PROPUESTA</h3>
 
-    
+
   <p>
     En la pestaña <a href="/proposals">PROPUESTAS</a>, tendrás la posibilidad de “<a href="/proposals/new">crear propuesta</a>”. Para ello deberás de rellenar los campos:
   </p>
@@ -80,37 +75,14 @@
     <li>Deberás seleccionar el eje o ejes en los que se enmarca tu propuesta.</li>
   </ul>
   <p>En MENU – ADMINISTRACIÓN – LEGISLACIÓN COLABORATIVA, podrás editar (modificar) el texto de tu propuesta y también podrás eliminarla. </p>
-  
+
   </div></div>
- 
+
  <div class="row section-content">
 <div class="small-12 column" id="proposals" data-magellan-target="proposals">
 <p>Recuerda ser respetuoso en tus aportaciones y las de los demás. Queremos que <a href="/">CANTABRIA EN MOVIMIENTO</a> sea un espacio abierto para el debate y reflexión sobre el futuro de la movilidad en nuestra región. </p>
 </div></div>
 
-
-    <!--<div class="small-12 medium-12 large-12 column">
-      <% if feature?(:debates) %>
-        <%= render "pages/help/debates" %>
-      <% end %>
-
-      <% if feature?(:proposals) %>
-        <%= render "pages/help/proposals" %>
-      <% end %>
-
-      <% if feature?(:budgets) %>
-        <%= render "pages/help/budgets" %>
-      <% end %>
-
-      <% if feature?(:polls) %>
-        <%= render "pages/help/polls" %>
-      <% end %>
-
-      <% if feature?(:legislation) %>
-        <%= render "pages/help/processes" %>
-      <% end %>
-    </div> -->
-    
   </div>
 
   <div class="row">
