--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -17,7 +17,7 @@
         <span></span>
         <h1>Comparte tus ideas</h1>
         <p class="">CANTABRIA EN MOVIMIENTO es una Plataforma Participativa para entablar un diálogo social con la ciudadanía y los actores implicados en el ecosistema de movilidad. Se pretenden afrontar los retos futuros de la movilidad y el transporte en Cantabria para el establecimiento de estrategias de movilidad sostenible.  <br><br>
-Por todo ello os invitamos a participar para que juntos podamos construir los pilares de una movilidad <b>SEGURA, SOSTENIBLE Y CONECTADA</b> en Cantabria. Queremos escuchar vuestras propuestas, que opinéis sobre las nuestras, saber vuestros problemas y afrontar mediante el diálogo los retos futuros de la movilidad en nuestra región <br><br>
+Por todo ello os invitamos a participar para que juntos podamos construir los pilares de una movilidad <b>SEGURA, SOSTENIBLE Y CONECTADA</b> en Cantabria. Queremos escuchar vuestras propuestas, que opinéis sobre las nuestras, saber vuestros problemas y afrontar mediante el diálogo los retos futuros de la movilidad en nuestra región. <br><br>
 <h4><b>¡PARTICIPA! ¡Construyamos juntos la movilidad sostenible de Cantabria!</b></h4><br>
 <b>¿CÓMO PUEDES PARTICIPAR?</b><br><br>
 <li>Compartiendo tus propuestas, votando las de otros ciudadanos/as, y Valorando y opinando sobre las propuestas cerradas que los técnicos han incluido en esta web.</li>
@@ -26,7 +26,7 @@ Por todo ello os invitamos a participar para que juntos podamos construir los pi
 
 </p>
         <div class="small-12 medium-6 large-4" style="width: 50%;margin: 0 auto;">
-          <a class="button expanded large" href="/users/sign_up">¿Quieres participar?, Regístrate</a>
+          <a class="button expanded large" href="/users/sign_up">¿Quieres participar? ¡Regístrate!</a>
         </div>
       </div>
 
@@ -46,21 +46,6 @@ Por todo ello os invitamos a participar para que juntos podamos construir los pi
   <div class="small-12 column ">
         <h3 class="title">Participa</h3>
         <div class="row" data-equalizer="" data-equalizer-on="medium" data-resize="b9h079-eq" data-mutate="4hta6g-eq" data-n="417812-n">
-    <!-- Quito lo de legislación
-    <div id="widget_card_6" class="card small-12 medium-6 column margin-bottom end" data-equalizer-watch="" style="height: 345px;">
-  <a href="/legislation/processes">
-    <figure class="figure-card">
-      <div class="gradient"></div>
-        <%= image_tag(image_path_for("feve.jpg"), class: "float-left", alt: setting["org_name"]) %>
-      <figcaption>
-        <br>
-        <h3>Ejes de movilidad</h3>
-      </figcaption>
-    </figure>
-    <p class="description">Accede a los ejes de movilidad. Participa en la creación de la estrategia de movilidad, nosotros te proponemos temas para que nos hagas llegar tu opinión y tus propuestas. ¡No dudes en participar!.</p>
-    <p>¡Haz click aquí para acceder a los ejes!</p>
-</a></div>
-      -->
     <div id="widget_card_7" class="card small-12 medium-6 column margin-bottom end" data-equalizer-watch="" style="height: 345px;">
   <a href="/proposals">
     <figure class="figure-card">
@@ -71,7 +56,7 @@ Por todo ello os invitamos a participar para que juntos podamos construir los pi
         <h3>Propuestas</h3>
       </figcaption>
     </figure>
-    <p class="description">Comparte tus propuestas, votan las de otros ciudadanos/as, y valora y opina sobre las propuestas cerradas que los técnicos han incluido en esta web</p>
+    <p class="description">Comparte tus propuestas, vota las de otros ciudadanos/as, y valora y opina sobre las propuestas que los técnicos han incluido en esta web.</p>
     <p>¡Haz click aquí para acceder a las propuestas!</p>
 </a></div>
 
