--- a/app/components/sdg/related_list_selector_component.html.erb
+++ b/app/components/sdg/related_list_selector_component.html.erb
@@ -1,6 +1,5 @@
 <fieldset class="sdg-related-list-selector">
   <legend><%= t("sdg.related_list_selector.title") %></legend>
-
   <div class="input-section">
     <fieldset class="goals">
       <legend><%= t("sdg.related_list_selector.goal_list", record: relatable_name) %></legend>
@@ -16,7 +15,7 @@
                       placeholder: t("sdg.related_list_selector.placeholder"),
                       hint: sanitize(t("sdg.related_list_selector.hint",
                                       link: link_to(t("sdg.related_list_selector.help.text"),
-                                                      sdg_help_path,
+                                                      "/sdg/goals", # sdg_help_path,
                                                       title: t("shared.target_blank"),
                                                       target: "_blank")),
                                      attributes: %w[href title target]),
