--- a/app/views/proposals/created.html.erb
+++ b/app/views/proposals/created.html.erb
@@ -3,19 +3,19 @@
     <div class="small-12 column">
       <h2><%= t("proposals.created.title") %></h2>
 
-      <p><%= t("proposals.created.motivation") %></p>
-      <p><%= sanitize(t("proposals.created.motivation_2")) %></p>
-
-      <% if can?(:dashboard, @proposal) %>
-        <%= link_to t("proposals.created.dashboard"),
-                    progress_proposal_dashboard_path(@proposal),
-                    class: "button" %>
-      <% end %>
+      <!-- <p><%= t("proposals.created.motivation") %></p>
+      <p><%= sanitize(t("proposals.created.motivation_2")) %></p> -->
 
       <% if can?(:publish, @proposal) %>
         <%= link_to t("proposals.created.publish"),
                     publish_proposal_path(@proposal),
-                    method: :patch, class: "button" %>
+                    method: :patch, class: "button" %> <!-- "button" -->
+      <% end %>
+
+      <% if can?(:dashboard, @proposal) %>
+        <%= link_to t("proposals.created.dashboard"),
+                    progress_proposal_dashboard_path(@proposal),
+                    class: "button tiny" %>
       <% end %>
     </div>
   </div>
