logo gobierno added

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -20,6 +20,10 @@
       </div>
       <div class="small-12 medium-4 column">
         <%= image_tag(image_path_for("lebaniego.png"), class: "float-left", alt: setting["org_name"]) %>
+        
+      </div>
+      <div class="small-12 medium-4 column">
+        <%= image_tag(image_path_for("gobierno.png"), class: "float-left", alt: setting["org_name"]) %>
       </div>
     </div>
 
