--- a/app/views/legislation/processes/_proposals_content.html.erb
+++ b/app/views/legislation/processes/_proposals_content.html.erb
@@ -21,7 +21,7 @@
                          new_legislation_process_proposal_path(process),
                          class: "button expanded",
                          id: "create-new-proposal" %>-->
-                          <%= link_to "Comparte tu Idea",
+                          <%= link_to "Comparte tu idea",
                          new_legislation_process_proposal_path(process),
                          class: "button expanded",
                          id: "create-new-proposal" %> 
